# drudgefeed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-feed.yml
src/drudgefeed/: __init__.py  cli.py  feed.py  parser.py  server.py
tests/: test_cli.py  test_feed.py  test_parser.py  test_server.py
tests/fixtures/: drudge_sample.html
